# TransColors

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup_dev.sh
cloudflare/: README.md  wrangler.toml
cloudflare/src/: index.js
med-llm/config/: config.yaml
med-llm/src/: vector_store.py
med-llm/src/crawlers/: wikipedia_crawler.py
trans-llm/src/: config.py  crawler_main.py  text_processor.py
trans-llm/src/crawlers/: base_crawler.py  psychonautwiki_crawler.py
